Bug Fixes and Improvements
- App.js
Changed import name from "EventsList" to "EventList"

- CreateEvent.js
Changed everything from "onChange" to "handle"

- EventDatail.css
Removed extra space

- EventDetail.js
Changed everything from "onChange" to "handle"
Added "club.name" above card

- EventList.css
Removed white space around image in the card

- EventList.js
Removed white space around image in the card

- LogIn.js
Changed everything from "onChange" to "handle"

--- a/src/EventList/EventList.css
+++ b/src/EventList/EventList.css
@@ -47,3 +47,7 @@
   opacity: 80%;
   border-radius: 5px;
 }
+
+.card-img{
+  border-radius: 0;
+}
